fix games images size on mobile

--- a/src/css/topGames.css
+++ b/src/css/topGames.css
@@ -97,7 +97,7 @@
 .gameByCategory-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: transform 0.3s ease;
 }
 
